<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_margin="2dp"
	android:background="@drawable/list_bg"
	android:orientation="vertical"
	android:padding="8dp">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/item"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/quiz_title"
			android:layout_width="0dp"
			android:layout_height="33dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:padding="8dp"
			android:text="@string/quiz_list_quiz_title"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/quiz_image"
			app:layout_constraintTop_toTopOf="parent" />

		<Button
			android:id="@+id/expandable_toggle_button"
			style="@style/TransparentButton"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintBottom_toBottomOf="@+id/quiz_short_desc"
			app:layout_constraintEnd_toEndOf="@+id/quiz_title"
			app:layout_constraintHorizontal_bias="0.515"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.0" />

		<TextView
			android:id="@+id/quiz_short_desc"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:padding="8dp"
			android:text="@string/quiz_list_quiz_subtitle"
			app:layout_constraintEnd_toEndOf="@+id/quiz_title"
			app:layout_constraintStart_toEndOf="@+id/quiz_image"
			app:layout_constraintTop_toBottomOf="@+id/quiz_title" />

		<ImageView
			android:id="@+id/quiz_image"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@mipmap/ic_launcher"
			android:contentDescription="@string/dummy_img_content_desc" />

	</android.support.constraint.ConstraintLayout>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/expandable"
		android:layout_width="fill_parent"
		android:layout_height="match_parent"
		android:layout_margin="8dp"
		android:background="@drawable/list_detail_bg">

		<TextView
			android:id="@+id/quiz_long_desc"
			android:layout_width="0dp"
			android:layout_height="96dp"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/quiz_list_quiz_description"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/buttonA"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<Button
			android:id="@+id/buttonA"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginTop="8dp"
			android:padding="4dp"
			android:text="Quiz Starten"
			android:textSize="12sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	</android.support.constraint.ConstraintLayout>
</LinearLayout>